--- a/rock_paper_scissors.css
+++ b/rock_paper_scissors.css
@@ -1,37 +1,85 @@
-body {background-color:rgb(252, 242, 240)}
-
-#rockDecision {
-    display: flex;
-    height: 200px;
-    width: 200px;
+body {
+    background-color:rgb(252, 242, 240)
 }
 
-#rockButton {
-    display: flex;
-    height: 200px;
-    width: 200px;
-}
+    .headerContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: safe center; 
+        align-items: safe center; 
+        box-sizing: content-box;
 
-#paperDecision {
-    display: flex;
-    height: 200px;
-    width: 200px;
-}
+        width: 99%;
+        height: 150px;
+        border: 5px solid blue;
+        position: relative;
+    }
+        .title {
+            position: relative;
+            font-family: 'Inconsolata', monospace;
+        }
+        .introPara1 {
+            position: relative;
+            font-family: 'Inconsolata', monospace;
+            font-size: small;
+        }
+        .introPara2 {
+            position: relative;
+            font-family: 'Inconsolata', monospace;
+            font-size: small;
+        }
 
-#paperButton {
-    display: flex;
-    height: 200px;
-    width: 200px;
-}
+    .outputContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: safe center; 
+        align-items: safe flex-end; 
+        box-sizing: content-box;
 
-#scissorsDecision {
-    display: flex;
-    height: 200px;
-    width: 200px;
-}
+        width: 99%;
+        height: 200px;
+        border: 5px solid blue;
+        position: relative;
+     
+    
+    }
 
-#scissorsButton {
-    display: flex;
-    height: 200px;
-    width: 200px;
-}
+    .buttonContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: safe center; 
+        align-items: safe flex-end; 
+        box-sizing: content-box;
+
+        width: 99%;
+        height: 200px;
+        border: 5px solid blue;
+        position: relative;
+
+    }
+        #rockDecision {
+            height: 200px;
+            width: 200px;
+        }
+            #rockButton {
+                height: 200px;
+                width: 200px;
+            }
+
+        #paperDecision {
+            height: 200px;
+            width: 200px;
+        }
+            #paperButton {
+                height: 200px;
+                width: 200px;
+            }
+
+        #scissorsDecision {
+            height: 200px;
+            width: 200px;
+        }
+            #scissorsButton {
+                height: 200px;
+                width: 200px;
+            }
