--- a/rock_paper_scissors.css
+++ b/rock_paper_scissors.css
@@ -50,6 +50,7 @@ body {
             width: 99%;
             height: 100%;
             position: relative;
+            order: 1;
         }
             .playerImageOutput {
                 align-self: center;
@@ -68,13 +69,28 @@ body {
                 .playerScoreOutputText {
                     font-family: 'Inconsolata', monospace;
                     font-size: 20px;
-                    margin-top: 10px;
-                    margin-left: 30px;
-                    margin-bottom: 10px;
-                    margin-right: 0px;
-                    position: absolute;
-                    left: 56px;
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
                 }
+        
+        
+        .face { 
+            display: flex;
+            flex-direction: column;
+            justify-content: safe center;
+            align-content: safe center;
+            box-sizing: content-box;
+            background-image: url("/Images/faceNeutral.png");
+            background-repeat: no-repeat;
+            background-size: 200px 200px;
+            background-attachment: fixed;
+            background-position: center;
+            width: 99%;
+            height: 100%;
+            position: relative;
+            order: 2;
+        } 
 
         .computerDecisionOutput {
             display: flex;
@@ -85,6 +101,7 @@ body {
             width: 99%;
             height: 100%;
             position: relative;
+            order: 3;
         }
             .computerImageOutput {
                 align-self: center;
@@ -103,13 +120,11 @@ body {
                 .computerScoreOutputText {
                     font-family: 'Inconsolata', monospace;
                     font-size: 20px;
-                    margin-top: 10px;
-                    margin-left: 30px;
-                    margin-bottom: 10px;
-                    margin-right: 0px;
-                    position: absolute;
-                    left: 56px;
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
                 }
+
 
 
     .buttonContainer {
