--- a/rock_paper_scissors.css
+++ b/rock_paper_scissors.css
@@ -1,5 +1,7 @@
 body {
-    background-color:rgb(252, 242, 240)
+    background-color:rgb(252, 242, 240);
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
     .headerContainer {
@@ -9,7 +11,7 @@ body {
         align-items: safe center; 
         box-sizing: content-box;
 
-        width: 99%;
+        width: 100%;
         height: 170px;
         position: relative;
     }
@@ -35,7 +37,7 @@ body {
         align-items: safe flex-end; 
         box-sizing: content-box;
 
-        width: 99%;
+        width: 100%;
         height: 280px;
         position: relative;
         
@@ -47,7 +49,7 @@ body {
             align-content: safe center;
             box-sizing: content-box;
 
-            width: 99%;
+            width: 100%;
             height: 100%;
             position: relative;
             order: 1;
@@ -60,13 +62,13 @@ body {
                 height: 250px;
                 position: relative;
             }
-            .playerScoreOutput {
+            .playerNameOutput {
                 width: 30%;
                 height: 20%;
                 position: relative;
                 align-self: center;
             }
-                .playerScoreOutputText {
+                .playerNameOutputText {
                     font-family: 'Inconsolata', monospace;
                     font-size: 20px;
                     width: 100%;
@@ -86,10 +88,10 @@ body {
             background-size: 200px 200px;
             background-attachment: fixed;
             background-position: center;
-            width: 99%;
+            width: 100%;
             height: 100%;
             position: relative;
-            order: 2;
+            order: 3;
         } 
 
         .computerDecisionOutput {
@@ -98,10 +100,10 @@ body {
             justify-content: safe center;
             box-sizing: content-box;
 
-            width: 99%;
+            width: 100%;
             height: 100%;
             position: relative;
-            order: 3;
+            order: 5;
         }
             .computerImageOutput {
                 align-self: center;
@@ -111,30 +113,68 @@ body {
                 height: 250px;
                 position: relative;
             }
-            .computerScoreOutput {
+            .computerNameOutput {
                 width: 30%;
                 height: 20%;
                 position: relative;
                 align-self: center;
             }
-                .computerScoreOutputText {
+                .computerNameOutputText {
                     font-family: 'Inconsolata', monospace;
                     font-size: 20px;
                     width: 100%;
                     height: 100%;
                     text-align: center;
                 }
+        .playerScoreOutput {
+            display: flex;
+            flex-direction: column;
+            justify-content: safe center;
+            box-sizing: content-box;
+
+            width: 100%;
+            height: 100%;
+            position: relative;
+            order: 2;
+
+        }
+            .playerScoreOutputText {
+                font-family: 'Inconsolata', monospace;
+                font-size: 40px;
+                width: 100%;
+                height: 30%;
+                text-align: center;
+            }
+
+        .computerScoreOutput {
+            display: flex;
+            flex-direction: column;
+            justify-content: safe center;
+            box-sizing: content-box;
+
+            width: 100%;
+            height: 100%;
+            position: relative;
+            order: 4;
+        }
+            .computerScoreOutputText {
+                font-family: 'Inconsolata', monospace;
+                font-size: 40px;
+                width: 100%;
+                height: 30%;
+                text-align: center;
+            }
 
 
 
-    .buttonContainer {
+    #buttonContainer {
         display: flex;
         flex-direction: row;
         justify-content: safe center; 
         align-items: safe flex-end; 
         box-sizing: content-box;
 
-        width: 99%;
+        width: 100%;
         height: 150px;
         position: relative;
     }
@@ -146,6 +186,11 @@ body {
             #rockButton {
                 height: 150px;
                 width: 150px;
+                transition: transform 1s;
+                outline: none;
+            }
+            #rockButton:hover {
+                transform: scale(1.1);
             }
 
         #paperDecision {
@@ -155,6 +200,11 @@ body {
             #paperButton {
                 height: 150px;
                 width: 150px;
+                transition: transform 1s;
+                outline: none;
+            }
+            #paperButton:hover {
+                transform: scale(1.1);
             }
 
         #scissorsDecision {
@@ -164,4 +214,68 @@ body {
             #scissorsButton {
                 height: 150px;
                 width: 150px;
+                transition: transform 1s;
+                outline: none;
             }
+            #scissorsButton:hover {
+                transform: scale(1.1);
+            }
+
+
+.playerImageOutputRock {
+    align-self: center;
+    justify-self: center;
+    background-image: url("/Images/rock.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.playerImageOutputPaper {
+    align-self: center;
+    justify-self: center;
+    background-image: url("/Images/paper.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+   
+}
+.playerImageOutputScissors {
+    align-self: center;
+    justify-self: center;
+    background-image: url("/Images/scissors.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.computerImageOutputRock {
+    align-self: center;
+    justify-self: center;
+    background-image: url("/Images/rock.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.computerImageOutputPaper {
+    align-self: center;
+    justify-self: center;
+    background-image: url("/Images/paper.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.computerImageOutputScissors {
+    align-self: center;
+    justify-self: center;
+    background-image: url("/Images/scissors.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
