fixed image output
fixed computer and player image outputs

--- a/rock_paper_scissors.css
+++ b/rock_paper_scissors.css
@@ -105,7 +105,7 @@ body {
             position: relative;
             order: 5;
         }
-            .computerImageOutput {
+            .computerImageOutputBlank {
                 align-self: center;
                 background-image: url("/Images/blank.png");
                 background-size: cover;
@@ -227,27 +227,29 @@ body {
     justify-self: center;
     background-image: url("/Images/rock.png");
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 220px;
+    height: 220px;
     position: relative;
 }
+
 .playerImageOutputPaper {
     align-self: center;
     justify-self: center;
     background-image: url("/Images/paper.png");
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 220px;
+    height: 220px;
     position: relative;
    
 }
+
 .playerImageOutputScissors {
     align-self: center;
     justify-self: center;
     background-image: url("/Images/scissors.png");
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 220px;
+    height: 220px;
     position: relative;
 }
 
@@ -256,17 +258,18 @@ body {
     justify-self: center;
     background-image: url("/Images/rock.png");
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 220px;
+    height: 220px;
     position: relative;
 }
+
 .computerImageOutputPaper {
     align-self: center;
     justify-self: center;
     background-image: url("/Images/paper.png");
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 220px;
+    height: 220px;
     position: relative;
 }
 
@@ -275,7 +278,7 @@ body {
     justify-self: center;
     background-image: url("/Images/scissors.png");
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 220px;
+    height: 220px;
     position: relative;
 }
