--- a/rock_paper_scissors.css
+++ b/rock_paper_scissors.css
@@ -282,3 +282,37 @@ body {
     height: 220px;
     position: relative;
 }
+
+.faceSmile {
+    display: flex;
+    flex-direction: column;
+    justify-content: safe center;
+    align-content: safe center;
+    box-sizing: content-box;
+    background-image: url("/Images/faceSmile.png");
+    background-repeat: no-repeat;
+    background-size: 200px 200px;
+    background-attachment: fixed;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    order: 3;   
+}
+
+.faceSad {
+    display: flex;
+    flex-direction: column;
+    justify-content: safe center;
+    align-content: safe center;
+    box-sizing: content-box;
+    background-image: url("/Images/faceSad.png");
+    background-repeat: no-repeat;
+    background-size: 200px 200px;
+    background-attachment: fixed;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    order: 3;
+}
